# libzc

./: .clang-format  .gitattributes  .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile.clang  Dockerfile.deb  Dockerfile.debian  Dockerfile.gcc  Makefile.am  Makefile.docker  NEWS  README.debug  README.md  autogen.sh  builddeb  configure.ac  devscripts  docker-build  docker-compose.yml  gen_decryptbyte.py  runafl.sh  runastyle.sh  runcppcheck.sh  runperf.sh  runvalgrind.sh  test-internal-rep.sh  todo.org
.github/workflows/: build-mingw64.yml  build.yml  check.yml  coverity.yml  debian.yml
bench/: bruteforce.gnu  results.txt  runbench.sh
data/: mkdataset  mkptextdata.sh  test_bruteforce.sh  test_plaintext.sh  testrandom
debian/: changelog  control  copyright  libzc3.dirs  libzc3.install  libzc3.symbols  libzc4.symbols  libzc6.symbols  rules  watch  yazc.dirs  yazc.install  yazc.lintian-overrides
docker/afl/: Dockerfile
docker/clang/: Dockerfile
docker/deb/: Dockerfile
docker/debian/: Dockerfile
docker/gcc/: Dockerfile
docker/mingw64/: 0001-Temp-Makefile-fix.patch  Dockerfile
docker/scanbuild/: Dockerfile
lib/: .gitignore  Makefile.am  bforce.c  bitmap.c  bitmap.h  common.c  crc32.h  decrypt_byte.h  dict.c  file.c  find_password.c  inflate.c  ka.c  kernel.cl  key2_reduce.c  key2_reduce.h  key_table.c  key_table.h  kvector.c  libzc.c  libzc.h  libzc.pc.in  libzc.sym  libzc_private.h  list.h  pool.c  pool.h  ptext.c  ptext_attack.c  ptext_private.h  ptext_reduce.c  pthread_barrier.c  pwstream.c  pwstream.h  qsort.c  qsort.h  sys.c  test_crack.c  test_crk.c  test_crk_ptext.c  (+21 more)
m4/: ax_check_cl.m4
scripts/: build-afl.sh  build-generic.sh  build-mingw64.sh  build-scanbuild.sh  builddeb  clang-format.sh  common.sh  cppcheck.sh  gen_decryptbyte.py  install-deps.sh  perf.sh  valgrind.sh
src/: .gitignore  libzc.c  libzc.h  libzc.pc.in  libzc.sym  libzc_private.h  test-libzc.c  test_crack.c  test_file.c  test_libzc.c  test_libzc.h  test_password_generator.c  test_pwgen.c  zc_crack.c  zc_file.c  zc_pwgen.c  zip.c  zip.h
tests/: Makefile.am  check_basic.c  check_bruteforce.c  check_dictionary.c  check_file.c  check_plaintext.c  check_plaintext_password.c  check_pool.c  check_pwstream.c  check_reduce.c  dict.txt  gentestpool.py  initkeys.py  test_plaintext.h
tests/old/: test_crk.c  test_crk_ptext.c  test_file.c  test_ka.c  test_key2_reduce.c  test_libzc.c  test_libzc.h
yazc/: .gitignore  Makefile.am  bruteforce.c  cleanupqueue.h  dictionary.c  info.c  main.c  plaintext.c  yazc-bruteforce.c  yazc-common.c  yazc-dictionary.c  yazc-info.c  yazc-opencl.c  yazc-plaintext.c  yazc.1  yazc.c  yazc.h
